--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,7 +1,7 @@
 <div class="footer bg-primary">
     <div class="container">
-        <div class="d-flex justify-space-between sm-justify-end align-items-center mb-9">
-            <ul class="d-flex sm-d-none">
+        <div class="d-flex justify-space-between align-items-center sm-justify-end mb-7">
+            <ul class="footer-menu d-flex sm-d-none">
                 <li><a class="text-light mr-12" href="index.html">首頁</a></li>
                 <li><a class="text-light mr-12" href="product.html">系列鏡框</a></li>
                 <li><a class="text-light mr-12" href="#">門市據點</a></li>
