--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -1,4 +1,10 @@
 // _mixin.scss
+@mixin pad-large {
+    @media(max-width: 992px){
+        @content;
+    }
+}
+
 @mixin pad{
     @media(max-width: 768px){
         @content;
@@ -6,7 +12,7 @@
 }
 
 @mixin mobile{
-    @media(max-width: 375px){
+    @media(max-width: 576px){
         @content;
     }
 }
